   GUI callbacks, postscript output, etc.<li>
   <li>java: Allow for waitfor functions in Octave. Use dlopen/dlsym
   rather than symbolic linking to the JVM in linux and OS X
   platforms.</li>
   <li>signal: New functions welchwin, blackmannutall, shanwavf, mexihat
   meyeraux and morlet. Bug fix in specgram for window with an odd
   number of elements.</li>
`  <li>geometry: Remove the geometry package that is migrate dto the
   Octave core.</li>
   <li>polynomial: Remove polyint function, migrated to the Octave core.</li>
   <li>statistics: Aligned function names and arguments for matlab
   compatibility, removing the function pascal_stat and weibstat and
   replacing them with nbinstat and wblstat.</li>
   <li>arpack: Bug fix to allow non convergence to be correctly flagged.</li>
   <li>general bug fixes and improvements.</li>
</ul>
</dd>
<dt>September 21, 2007</dt>
<dd>Updated the OS X binary release to use Octave 2.9.14. There are
significant speed improvements in this release, due to an improved
compilation and so all Mac users are urged to update.
</dd>
<dt>July 26, 2007</dt>
<dd>Updated the Windows binary release to use Octave 2.9.13.
</dd>
<dt>July 26, 2007</dt>
<dd>
<p>Release of Octave-forge tested against Octave 2.9.13. Many packages
 will also function function with earlier versions of Octave 2.9.
 Notable changes in this release include:</p>
<ul>
   <li>jhandles: New java based plotting and gui package based on
   JOGL.</li>
   <li>bim: New package for solving Diffusion Advection Reaction (DAR)
   Partial Differential Equations based on the Finite Volume
   Scharfetter-Gummel (FVSG) method. </li>
   <li>msh: New package for triangular and tetrahedral meshing based
   on GMSH</li>
   <li>fpl: New packages containing a collection of routines to plot
   data on unstructured triangular and tetrahedral meshes based on
   OpenDX.</li>
   <li>triangular: New package for an example of how to add user types
   for Octave.</li>